feat: ticket comment resource and its relation
